# yousician-solution

./: .gitignore  README.md  launch.sh  pyproject.toml  songs.json
flaskr/: app.py  http_error.py  schema.py
tests/: test_app.py  test_yousician_assignment.py
